# grafiek

./: package-lock.json  package.json  tsconfig.json  vite.config.ts
grafiek_engine/: Cargo.toml
grafiek_wasm/: Cargo.toml  modulize.js
grafiek_wasm/.cargo/: config.toml
grafiek_wasm/resources/: letterbox.fs
grafiek_wasm/src/: init.rs  lib.rs  node_types.rs  preview_manager.rs  util.rs
src/lib/: app.ts  common.ts  layout.ts
src/nodes/: input.svelte  output.svelte  shader.svelte  webgpuCanvas.svelte
src/resources/: demo.json
src/routes/: +layout.svelte  +page.svelte  styles.css
